Add admin-managed AS Accounts directory
